Junit testing in sep folder
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@4 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/src/main/javascript/specview/specview/deploy/pub.html
+++ b/src/main/javascript/specview/specview/deploy/pub.html
@@ -7,7 +7,7 @@ var CLOSURE_NO_DEPS = true;
 </script>
 
 	<script src="./specview.js"></script>
-	<script src="../test/molfile.js"></script>
+	<script src="../../specviewTest/data/molfile.js"></script>
 	
 	<script>
 		function loadMolecule() {
