--- a/src/main/javascript/specview/specview/json/mol2json.html
+++ b/src/main/javascript/specview/specview/json/mol2json.html
@@ -4,15 +4,15 @@
 <script src="../../third-party/closure/closure/goog/base.js"></script>
 <script src="../deps.js"></script>
 <script>
-	goog.require('specview.io.json');
-	goog.require('goog.events.EventType');
-	goog.require('goog.dom');
-	goog.require('goog.format.JsonPrettyPrinter');
-    goog.require('specview.io.mdl');
-    goog.require('specview.controller.Controller');
-    goog.require('specview.controller.plugins.Highlight');
+goog.require('specview.io.json');
+goog.require('goog.events.EventType');
+goog.require('goog.dom');
+goog.require('goog.format.JsonPrettyPrinter');
+goog.require('specview.io.mdl');
+goog.require('specview.controller.Controller');
+goog.require('specview.controller.plugins.Highlight');
 </script>
-<script src="../test/molfile.js"></script>
+<script src="../../specviewTest/data/molfile.js"></script>
 
 <script>
 function loadMol() {
