--- a/src/main/javascript/specview/specview/controller/demo.html
+++ b/src/main/javascript/specview/specview/controller/demo.html
@@ -3,7 +3,7 @@
 
 <script src="../../third-party/closure/closure/goog/base.js"></script>
 <script src="../deps.js"></script>
-<script src="../test/molfile.js"></script>
+<script src="../../specviewTest/data/molfile.js"></script>
 <script>
     goog.require('goog.events.EventType');
     goog.require('goog.dom');
