--- a/src/main/javascript/specview/specview/controller/demo.html
+++ b/src/main/javascript/specview/specview/controller/demo.html
@@ -40,6 +40,13 @@ function initPage(){
     select1.addItem(new goog.ui.MenuItem('10', 10));
     select1.addItem(new goog.ui.MenuItem('11', 11));
     select1.addItem(new goog.ui.MenuItem('12', 12));
+    select1.addItem(new goog.ui.MenuItem('13', 13));
+    select1.addItem(new goog.ui.MenuItem('14', 14));
+    select1.addItem(new goog.ui.MenuItem('15', 15));
+    select1.addItem(new goog.ui.MenuItem('16', 16));
+    select1.addItem(new goog.ui.MenuItem('17', 17));
+    select1.addItem(new goog.ui.MenuItem('18', 18));
+    select1.addItem(new goog.ui.MenuItem('19', 19));
     
     select1.setSelectedIndex(0);
     select1.render(goog.dom.getElement('selectMolecule'));
