--- a/src/main/javascript/specview/specview/controller/demo.html
+++ b/src/main/javascript/specview/specview/controller/demo.html
@@ -47,6 +47,7 @@ function initPage(){
     select1.addItem(new goog.ui.MenuItem('17', 17));
     select1.addItem(new goog.ui.MenuItem('18', 18));
     select1.addItem(new goog.ui.MenuItem('19', 19));
+    select1.addItem(new goog.ui.MenuItem('20', 20));
     
     select1.setSelectedIndex(0);
     select1.render(goog.dom.getElement('selectMolecule'));
