New modification in demo5. The cmlObject has been created using XML parsing. There is still a problem with the stereospecificity renderer.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@17 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/src/main/javascript/specview/specviewTest/io/cmlXmlParseTest.html
+++ b/src/main/javascript/specview/specviewTest/io/cmlXmlParseTest.html
@@ -5,6 +5,8 @@
     <script src="../../third-party/closure/closure/goog/base.js"></script>
     <script src="../../specview/deps.js"></script>
     <script src="../data/specData/C8H2NF5.js"></script>
+    <script src="../data/specData/C18H17NO4.js"></script>
+    
     
     <script>
     goog.require('goog.testing.jsunit');
@@ -14,7 +16,7 @@
     <script>
 	    function testOne() {
 	    	var parser = new specview.io.CmlXMLparser();
-	        assertEquals('OK', "OKAY", parser.parseCML(specC8H2NF5));
+	        assertEquals('OK', "OKAY", parser.parseCML(specC18H17NO4));
 	    }
     </script>
     </head>
