--- a/src/main/javascript/specview/specview/controller/demo6.html
+++ b/src/main/javascript/specview/specview/controller/demo6.html
@@ -24,8 +24,8 @@
     goog.require('specview.controller.Controller');
     goog.require('specview.controller.plugins.Highlight');
     goog.require('specview.io.mdl');
-    goog.require('specview.model.Cmlobject');
-    goog.require('specview.io.CmlXMLparser');
+    goog.require('specview.model.NMRdata');
+    goog.require('specview.io.SpectrumCMLParser');
     goog.require('specview.io.spec');
     goog.require('specview.io.cml')
     goog.require('specview.util');
