--- a/src/main/javascript/specview/specviewTest/io/cmlXmlParseTest.html
+++ b/src/main/javascript/specview/specviewTest/io/cmlXmlParseTest.html
@@ -9,16 +9,16 @@
     
     <script>
     goog.require('goog.testing.jsunit');
-    goog.require('specview.io.CmlXMLparser');
+    goog.require('specview.io.SpectrumCMLParser');
     goog.require('specview.model.Molecule');
-    goog.require('specview.model.Cmlobject');
+    goog.require('specview.model.NMRdata');
 
     </script>
     
     <script>
 	    function testC18H17NO4() {
-	    	var CmlXmlObject=specview.io.CmlXMLparser.parseCML(specC8H2NF5);//XML document
-	    	var cmlObject=specview.io.CmlXMLparser.CmlXMLtoGraphicalObject(CmlXmlObject);//a cmlObject
+	    	var CmlXmlObject=specview.io.SpectrumCMLParser.parseCML(specC8H2NF5);//XML document
+	    	var cmlObject=specview.io.SpectrumCMLParser.CmlXMLtoGraphicalObject(CmlXmlObject);//a cmlObject
 	    	cmlObject.createMoleculeObjectOutOfCmlParserObject();//This will set the molecule attribute of the cmlObject so it can be a proper molecule
 	    	var molecule=cmlObject.molecule;
 	        assertEquals('count atoms', 14, molecule.atoms.length);
