--- a/src/main/javascript/specview/specview/controller/demo5.html
+++ b/src/main/javascript/specview/specview/controller/demo5.html
@@ -49,8 +49,8 @@ function initPage(){
 
 	//Initialisation of a molecule to display when the page is loading
 	var cmls=cmlmolecules.split("$$END$$\n");
-	var CmlXmlObject=specview.io.SpectrumCMLParser.parseCML(cmls[0]);//XML document
-	var cmlObject=specview.io.SpectrumCMLParser.CmlXMLtoGraphicalObject(CmlXmlObject);//a cmlObject
+	var CmlXmlObject=specview.io.SpectrumCMLParser.getDocument(cmls[0]);//XML document
+	var cmlObject=specview.io.SpectrumCMLParser.parseDocument(CmlXmlObject);//a cmlObject
 	cmlObject.createMoleculeObjectOutOfCmlParserObject();//This will set the molecule attribute of the cmlObject so it can be a proper molecule
 	var molecule=cmlObject.molecule;
 				
@@ -83,8 +83,8 @@ function initPage(){
         	  idx=0;
           }
 	      var molfile=cmls[idx];
-      	  var CmlXmlObject=specview.io.SpectrumCMLParser.parseCML(molfile);//XML document
-    	  var cmlObject=specview.io.SpectrumCMLParser.CmlXMLtoGraphicalObject(CmlXmlObject);//a cmlObject
+      	  var CmlXmlObject=specview.io.SpectrumCMLParser.getDocument(molfile);//XML document
+    	  var cmlObject=specview.io.SpectrumCMLParser.parseDocument(CmlXmlObject);//a cmlObject
     	  cmlObject.createMoleculeObjectOutOfCmlParserObject();//This will set the molecule attribute of the cmlObject so it can be a proper molecule
     	  var molecule=cmlObject.molecule;
     	  editor.setModels([molecule]);
