And more renaming
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@24 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/src/main/javascript/specview/specview/controller/demo3.html
+++ b/src/main/javascript/specview/specview/controller/demo3.html
@@ -33,12 +33,10 @@ function initPage(){
     c.setCapturing(true); 
     var controller = new specview.controller.Controller(goog.dom.getElement('moleculeContainer'),{background : {color : 'white'}});
 	controller.registerPlugin(new specview.controller.plugins.Highlight());
-
-    var nmrXml=specview.io.SpectrumCMLParser.getDocument(specC8H2NF5);//XML document
-    var cmlObject=specview.io.SpectrumCMLParser.parseDocument(nmrXml);//a cmlObject
-    cmlObject.createMoleculeObjectOutOfCmlParserObject();//This will set the molecule attribute of the cmlObject so it can be a proper molecule
-    var molecule=cmlObject.molecule;
-    controller.setModels([molecule ]);
+    var nmrXml=specview.io.SpectrumCMLParser.getDocument(specC8H2NF5);
+    var nmrData=specview.io.SpectrumCMLParser.parseDocument(nmrXml);
+    var molecule=nmrData.molecule;
+    controller.setModels([molecule]);
 };
 
 goog.events.listen(window, goog.events.EventType.LOAD, initPage);
