--- a/src/main/javascript/specview/specviewTest/io/cmlXmlParseTest.html
+++ b/src/main/javascript/specview/specviewTest/io/cmlXmlParseTest.html
@@ -17,23 +17,23 @@
     
     <script>
 	    function testC18H17NO4() {
-	    	var CmlXmlObject=specview.io.SpectrumCMLParser.getDocument(specC8H2NF5);//XML document
-	    	var cmlObject=specview.io.SpectrumCMLParser.parseDocument(CmlXmlObject);//a cmlObject
-	    	cmlObject.createMoleculeObjectOutOfCmlParserObject();//This will set the molecule attribute of the cmlObject so it can be a proper molecule
-	    	var molecule=cmlObject.molecule;
+	    	var cml=specview.io.SpectrumCMLParser.getDocument(specC8H2NF5);//XML document
+	    	var nmrData=specview.io.SpectrumCMLParser.parseDocument(cml);//a nmrData
+	    	var molecule=nmrData.molecule;
+            
 	        assertEquals('count atoms', 14, molecule.atoms.length);
 	        assertEquals('count bonds', 14, molecule.bonds.length);
 	        alert("Molecule name= "+ molecule.name+
 	        		"\nNumber of atoms= "+molecule.atoms.length+
 	        		"\nNumber of bonds= "+molecule.bonds.length+
-	        		"\nNumber of peaks= "+cmlObject.ArrayOfPeaks.length
+	        		"\nNumber of peaks= "+nmrData.ArrayOfPeaks.length
 	        		);
 	        for(var k=0;k<molecule.atoms.length;k++){
-	        	var innerId=cmlObject.molecule.getAtom(k).innerIdentifier;
-	        	alert(cmlObject.molecule.getAtom(k).innerIdentifier+"===reference===>"+
-	        			cmlObject.molecule.getAtom(k).peakMap[molecule.getAtom(k).innerIdentifier]+
-	        			"\n\n"+cmlObject.molecule.getAtom(k).innerIdentifier+"==>"+cmlObject.ArrayOfAtoms[cmlObject.molecule.getAtom(k).innerIdentifier]+
-	        			"\n\n"+cmlObject.molecule.getAtom(k).peakMap[molecule.getAtom(k).innerIdentifier]+"==>"+cmlObject.ArrayOfPeaks[cmlObject.molecule.getAtom(k).peakMap[molecule.getAtom(k).innerIdentifier]]);
+	        	var innerId=nmrData.molecule.getAtom(k).innerIdentifier;
+	        	alert(nmrData.molecule.getAtom(k).innerIdentifier+"===reference===>"+
+	        			nmrData.molecule.getAtom(k).peakMap[molecule.getAtom(k).innerIdentifier]+
+	        			"\n\n"+nmrData.molecule.getAtom(k).innerIdentifier+"==>"+nmrData.ArrayOfAtoms[nmrData.molecule.getAtom(k).innerIdentifier]+
+	        			"\n\n"+nmrData.molecule.getAtom(k).peakMap[molecule.getAtom(k).innerIdentifier]+"==>"+nmrData.ArrayOfPeaks[nmrData.molecule.getAtom(k).peakMap[molecule.getAtom(k).innerIdentifier]]);
 	        }
 	    }
     </script>
