And more renaming and shuffling
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@25 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/src/main/javascript/specview/specviewTest/io/cmlXmlParseTest.html
+++ b/src/main/javascript/specview/specviewTest/io/cmlXmlParseTest.html
@@ -26,14 +26,14 @@
 	        alert("Molecule name= "+ molecule.name+
 	        		"\nNumber of atoms= "+molecule.atoms.length+
 	        		"\nNumber of bonds= "+molecule.bonds.length+
-	        		"\nNumber of peaks= "+nmrData.ArrayOfPeaks.length
+	        		"\nNumber of peaks= "+nmrData.spectrum.peakList.length
 	        		);
 	        for(var k=0;k<molecule.atoms.length;k++){
 	        	var innerId=nmrData.molecule.getAtom(k).innerIdentifier;
 	        	alert(nmrData.molecule.getAtom(k).innerIdentifier+"===reference===>"+
 	        			nmrData.molecule.getAtom(k).peakMap[molecule.getAtom(k).innerIdentifier]+
-	        			"\n\n"+nmrData.molecule.getAtom(k).innerIdentifier+"==>"+nmrData.ArrayOfAtoms[nmrData.molecule.getAtom(k).innerIdentifier]+
-	        			"\n\n"+nmrData.molecule.getAtom(k).peakMap[molecule.getAtom(k).innerIdentifier]+"==>"+nmrData.ArrayOfPeaks[nmrData.molecule.getAtom(k).peakMap[molecule.getAtom(k).innerIdentifier]]);
+	        			"\n\n"+nmrData.molecule.getAtom(k).innerIdentifier+"==>"+nmrData.molecule.atoms[nmrData.molecule.getAtom(k).innerIdentifier]+
+	        			"\n\n"+nmrData.molecule.getAtom(k).peakMap[molecule.getAtom(k).innerIdentifier]+"==>"+nmrData.spectrum.peakList[nmrData.molecule.getAtom(k).peakMap[molecule.getAtom(k).innerIdentifier]]);
 	        }
 	    }
     </script>
