--- a/src/main/javascript/specview/specview/controller/demo3.html
+++ b/src/main/javascript/specview/specview/controller/demo3.html
@@ -3,61 +3,79 @@
 
 <script src="../../third-party/closure/closure/goog/base.js"></script>
 <script src="../deps.js"></script>
-
-<!-- CML -->
-<script src="../../specviewTest/data/specData/C8H2NF5.js"></script>
-<script src="../../specviewTest/data/CMLbenzene.js"></script>
-
-<!-- MDL -->
-<script src="../../specviewTest/data/cubane.js"></script>
-<script src="../../specviewTest/data/cycloPentane.js"></script>
-
+<script src="../../specviewTest/data/specData/cmlfile.js"></script>
 
 <script>
     goog.require('goog.events.EventType');
-    goog.require('goog.dom');
     goog.require('goog.ui.Select');
-    goog.require('goog.ui.MenuItem');
     goog.require('specview.controller.Controller');
     goog.require('specview.controller.plugins.Highlight');
-    goog.require('specview.io.mdl');
-    goog.require('specview.model.NMRdata');
     goog.require('specview.io.SpectrumCMLParser');
-
 </script>
 
 <script>
+
 function initPage(){
-    // uncomment next two lines to debug to console
-    var c = new goog.debug.Console(); 
-    c.setCapturing(true); 
-    var controller = new specview.controller.Controller(goog.dom.getElement('moleculeContainer'),{background : {color : 'white'}});
-	controller.registerPlugin(new specview.controller.plugins.Highlight());
-    var nmrXml=specview.io.SpectrumCMLParser.getDocument(specC8H2NF5);
-    var nmrData=specview.io.SpectrumCMLParser.parseDocument(nmrXml);
-    var molecule=nmrData.molecule;
-    controller.setModels([molecule]);
-};
+		
+	// uncomment next two lines to debug to console
+	var c = new goog.debug.Console(); 
+	c.setCapturing(true); 
+	
+	//Create the canvas and provide it with highlight plugins
+	var editor = new specview.controller.Controller(goog.dom.getElement('moleculeContainer'),{background : {color : 'white'}});
+	editor.registerPlugin(new specview.controller.plugins.Highlight());
 
-goog.events.listen(window, goog.events.EventType.LOAD, initPage);
+	//Initialisation of a molecule to display when the page is loading
+	var cmlData=cmlmolecules.split("$$END$$\n");
+	var xmlDoc=specview.io.SpectrumCMLParser.getDocument(cmlData[0]);//XML document
+	var spectrumData=specview.io.SpectrumCMLParser.parseDocument(xmlDoc);//a cmlObject
+	//var molecule=cmlObject.molecule;
+	editor.setModels([spectrumData]);
 
+	//Creation of the tool bar
+    var select1 = new goog.ui.Select();
+    select1.addItem(new goog.ui.MenuItem('0', 0));
+    select1.addItem(new goog.ui.MenuItem('1', 1));
+    select1.addItem(new goog.ui.MenuItem('2', 2));
+    select1.addItem(new goog.ui.MenuItem('3', 3));
+
+    select1.setSelectedIndex(0);
+    select1.render(goog.dom.getElement('selectMolecule'));
+    
+    goog.events.listen(select1, goog.ui.Component.EventType.ACTION,
+    function(e) {
+      var select = e.target;
+      var idx = select.getValue();
+      if(cmlData[idx]==undefined){
+          alert("NO SUCH MOLECULE IN THE ARRAY! Default molecle will be displayed : ")
+          idx=0;
+      }
+      var molfile=cmlData[idx];
+      var xmlDoc=specview.io.SpectrumCMLParser.getDocument(molfile);//XML document
+      var spectrumData=specview.io.SpectrumCMLParser.parseDocument(xmlDoc);//a cmlObject
+      //var molecule=spectrumData.molecule;
+      editor.setModels([spectrumData]);
+    });
+  };
+  goog.events.listen(window, goog.events.EventType.LOAD, initPage);
+ 
 </script>
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Display spectrum demo</title>
-    <link rel="stylesheet" href="../../css/specview.css" />
-    <link rel="stylesheet"  href="../../css/demo.css" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<title>Display spectrum demo</title>
+	<link rel="stylesheet" href="../../css/specview.css" />
+	<link rel="stylesheet"  href="../../css/demo.css" />
 </head>
 
 <body>
 
-    <fieldset style="width: 900px">
-    <legend><h1>CML viewer</h1></legend>
-    <br>
-            <div id="moleculeContainer" style="height: 300px">
-            </div>
-    </fieldset>
+	<fieldset style="width: 1024px">
+        <legend><h1>Spectrum viewer</h1></legend>
+        <br>
+        <label id="selectMolecule">Select a spectrum to render: </label>
+        <br>
+        <div id="moleculeContainer" style="height:300px"></div>
+	</fieldset>
 </body>
-
 </html>
