--- a/src/main/javascript/specview/specview/controller/demo3.html
+++ b/src/main/javascript/specview/specview/controller/demo3.html
@@ -38,6 +38,7 @@ function initPage(){
     select1.addItem(new goog.ui.MenuItem('1', 1));
     select1.addItem(new goog.ui.MenuItem('2', 2));
     select1.addItem(new goog.ui.MenuItem('3', 3));
+    select1.addItem(new goog.ui.MenuItem('4', 4));
 
     select1.setSelectedIndex(0);
     select1.render(goog.dom.getElement('selectMolecule'));
