--- a/src/main/javascript/specview/specview/controller/demo3.html
+++ b/src/main/javascript/specview/specview/controller/demo3.html
@@ -4,6 +4,7 @@
 <script src="../../third-party/closure/closure/goog/base.js"></script>
 <script src="../deps.js"></script>
 <script src="../../specviewTest/data/specData/cmlfile.js"></script>
+<script src="../../specviewTest/data/massSpecData/massSpec1.js"></script>
 
 <script>
     goog.require('goog.events.EventType');
@@ -58,7 +59,17 @@ function initPage(){
     select1.addItem(new goog.ui.MenuItem('3', 3));
     select1.addItem(new goog.ui.MenuItem('4', 4));
     select1.addItem(new goog.ui.MenuItem('5', 5));
-
+    select1.addItem(new goog.ui.MenuItem('6', 6));
+    select1.addItem(new goog.ui.MenuItem('7', 7));
+    select1.addItem(new goog.ui.MenuItem('8', 8));
+    select1.addItem(new goog.ui.MenuItem('9', 9));
+    select1.addItem(new goog.ui.MenuItem('10', 10));
+    select1.addItem(new goog.ui.MenuItem('11', 11));
+    select1.addItem(new goog.ui.MenuItem('12', 12));
+    select1.addItem(new goog.ui.MenuItem('13', 13));
+    select1.addItem(new goog.ui.MenuItem('14', 14));
+    select1.addItem(new goog.ui.MenuItem('15', 15));    
+    
     select1.setSelectedIndex(0);
     select1.render(goog.dom.getElement('selectMolecule'));
     
