--- a/src/main/javascript/specview/specview/controller/demo3.html
+++ b/src/main/javascript/specview/specview/controller/demo3.html
@@ -68,7 +68,7 @@ function initPage(){
     select1.addItem(new goog.ui.MenuItem('12', 12));
     select1.addItem(new goog.ui.MenuItem('13', 13));
     select1.addItem(new goog.ui.MenuItem('14', 14));
-    select1.addItem(new goog.ui.MenuItem('15', 15));    
+    select1.addItem(new goog.ui.MenuItem('MassSpec', 15)); 
     
     select1.setSelectedIndex(0);
     select1.render(goog.dom.getElement('selectMolecule'));
