new look and feel
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@72 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/src/main/webapps/metabolights/var/colorScheme.htm
+++ b/src/main/webapps/metabolights/var/colorScheme.htm
@@ -11,23 +11,23 @@
 /* Palette color codes */
 /* Feel free to copy&paste color codes to your application */
 
-.primary-1 { background-color: #FFCC00 }
-.primary-2 { background-color: #CC9933 }
-.primary-3 { background-color: #999900 }
-.primary-4 { background-color: #FFCC33 }
-.primary-5 { background-color: #FFFF66 }
+.primary-1 { background-color: #FFFFCC }
+.primary-2 { background-color: #999966 }
+.primary-3 { background-color: #666600 }
+.primary-4 { background-color: #FFFFCC }
+.primary-5 { background-color: #FFFFCC }
 
-.secondary-a-1 { background-color: #CC0099 }
-.secondary-a-2 { background-color: #993366 }
-.secondary-a-3 { background-color: #660066 }
-.secondary-a-4 { background-color: #CC3399 }
-.secondary-a-5 { background-color: #CC66CC }
+.secondary-a-1 { background-color: #CCCCCC }
+.secondary-a-2 { background-color: #996666 }
+.secondary-a-3 { background-color: #660033 }
+.secondary-a-4 { background-color: #CCCCCC }
+.secondary-a-5 { background-color: #CCCCCC }
 
-.secondary-b-1 { background-color: #006699 }
-.secondary-b-2 { background-color: #336666 }
-.secondary-b-3 { background-color: #003366 }
-.secondary-b-4 { background-color: #3399CC }
-.secondary-b-5 { background-color: #6699CC }
+.secondary-b-1 { background-color: #9999CC }
+.secondary-b-2 { background-color: #666666 }
+.secondary-b-3 { background-color: #330033 }
+.secondary-b-4 { background-color: #CC99CC }
+.secondary-b-5 { background-color: #CC99CC }
 
 /* end */
 
@@ -93,7 +93,7 @@ hr {
 </head><body>
 
 <h1>Color Palette by Color Scheme Designer</h1>
-<p>Palette URL: <a href="http://colorschemedesigner.com/#1xb29w0w0w0w0">http://colorschemedesigner.com/#1xb29w0w0w0w0</a></p>
+<p>Palette URL: <a href="http://colorschemedesigner.com/#2fb1D68.tQb7A">http://colorschemedesigner.com/#2fb1D68.tQb7A</a></p>
 <p>Color Space: RGB (Web Safe Colors); RGB color space reduced to 216 web safe color set</p>
 
 <table class="color-table">
@@ -101,42 +101,42 @@ hr {
 		<th>Primary Color:</th>
 		<td class="sample primary-1">
 			<div class="white">
-<strong>FFCC00</strong>
+<strong>FFFFCC</strong>
 			</div>
 			<div class="black">
-<strong>FFCC00</strong>
+<strong>FFFFCC</strong>
 			</div>
 		</td>
 		<td class="sample primary-2">
 			<div class="white">
-<strong>CC9933</strong>
+<strong>999966</strong>
 			</div>
 			<div class="black">
-<strong>CC9933</strong>
+<strong>999966</strong>
 			</div>
 		</td>
 		<td class="sample primary-3">
 			<div class="white">
-<strong>999900</strong>
+<strong>666600</strong>
 			</div>
 			<div class="black">
-<strong>999900</strong>
+<strong>666600</strong>
 			</div>
 		</td>
 		<td class="sample primary-4">
 			<div class="white">
-<strong>FFCC33</strong>
+<strong>FFFFCC</strong>
 			</div>
 			<div class="black">
-<strong>FFCC33</strong>
+<strong>FFFFCC</strong>
 			</div>
 		</td>
 		<td class="sample primary-5">
 			<div class="white">
-<strong>FFFF66</strong>
+<strong>FFFFCC</strong>
 			</div>
 			<div class="black">
-<strong>FFFF66</strong>
+<strong>FFFFCC</strong>
 			</div>
 		</td>
 	</tr>
@@ -144,42 +144,42 @@ hr {
 		<th>Secondary Color A:</th>
 		<td class="sample secondary-a-1">
 			<div class="white">
-<strong>CC0099</strong>
+<strong>CCCCCC</strong>
 			</div>
 			<div class="black">
-<strong>CC0099</strong>
+<strong>CCCCCC</strong>
 			</div>
 		</td>
 		<td class="sample secondary-a-2">
 			<div class="white">
-<strong>993366</strong>
+<strong>996666</strong>
 			</div>
 			<div class="black">
-<strong>993366</strong>
+<strong>996666</strong>
 			</div>
 		</td>
 		<td class="sample secondary-a-3">
 			<div class="white">
-<strong>660066</strong>
+<strong>660033</strong>
 			</div>
 			<div class="black">
-<strong>660066</strong>
+<strong>660033</strong>
 			</div>
 		</td>
 		<td class="sample secondary-a-4">
 			<div class="white">
-<strong>CC3399</strong>
+<strong>CCCCCC</strong>
 			</div>
 			<div class="black">
-<strong>CC3399</strong>
+<strong>CCCCCC</strong>
 			</div>
 		</td>
 		<td class="sample secondary-a-5">
 			<div class="white">
-<strong>CC66CC</strong>
+<strong>CCCCCC</strong>
 			</div>
 			<div class="black">
-<strong>CC66CC</strong>
+<strong>CCCCCC</strong>
 			</div>
 		</td>
 	</tr>
@@ -187,42 +187,42 @@ hr {
 		<th>Secondary Color B:</th>
 		<td class="sample secondary-b-1">
 			<div class="white">
-<strong>006699</strong>
+<strong>9999CC</strong>
 			</div>
 			<div class="black">
-<strong>006699</strong>
+<strong>9999CC</strong>
 			</div>
 		</td>
 		<td class="sample secondary-b-2">
 			<div class="white">
-<strong>336666</strong>
+<strong>666666</strong>
 			</div>
 			<div class="black">
-<strong>336666</strong>
+<strong>666666</strong>
 			</div>
 		</td>
 		<td class="sample secondary-b-3">
 			<div class="white">
-<strong>003366</strong>
+<strong>330033</strong>
 			</div>
 			<div class="black">
-<strong>003366</strong>
+<strong>330033</strong>
 			</div>
 		</td>
 		<td class="sample secondary-b-4">
 			<div class="white">
-<strong>3399CC</strong>
+<strong>CC99CC</strong>
 			</div>
 			<div class="black">
-<strong>3399CC</strong>
+<strong>CC99CC</strong>
 			</div>
 		</td>
 		<td class="sample secondary-b-5">
 			<div class="white">
-<strong>6699CC</strong>
+<strong>CC99CC</strong>
 			</div>
 			<div class="black">
-<strong>6699CC</strong>
+<strong>CC99CC</strong>
 			</div>
 		</td>
 	</tr>
